--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dimsemanaing2024",
-  "homepage": "https://gamequic.github.io/dimsemanaing2024/",
+  "homepage": "https://diimsemanaing2024uacjcom.info",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
